--- a/src/pages/Videos.module.css
+++ b/src/pages/Videos.module.css
@@ -25,7 +25,7 @@
   cursor: pointer;
   border: none;
   position: absolute;
-  top: 28%;
+  top: 33%;
   box-shadow: none;
   background-color: transparent;
   color: #267fc1;
